# cyrtag-fixer

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
