[package]
name = "cyrtag-fixer"
version = "0.1.0"
edition = "2024"
description = "Fix Cyrillic mojibake (CP1251 -> UTF-8) in audio tags and .cue files"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
encoding_rs = "0.8"
lofty = "0.22"
phf = { version = "0.13.1", features = ["macros"] }
walkdir = "2.5"

[profile.release]
strip = true